fixed alignment issues with ipads

--- a/themes/gauge_theme/static/css/theme.css
+++ b/themes/gauge_theme/static/css/theme.css
@@ -1663,8 +1663,12 @@ p.last {
   .sliding-docs-toc.docs-toc {
     display: none;
   }
+  .docs-container.no-right-bar.containers .edit-page {
+    top:45px;
+  }
   .edit-page {
     display: block;
+    top:18px;
   }
   #search {
     width: 180px;
@@ -1679,7 +1683,10 @@ p.last {
     margin-top: 114px;
   }
   div.topic {
-    margin-top: -50px;
+    margin-top: 0px;
+  }
+  .docs-container.no-right-bar.containers .topic {
+    margin-top: 19px;
   }
   .fixed-docs-toc.docs-toc {
     display: block;
@@ -1707,12 +1714,12 @@ p.last {
   }
   .localtoc-container>ul {
     margin: 10px 0;
-    padding-left: 0px;
+    padding-left: 25px;
     display: none;
   }
   .mobile-local-toc {
     text-align: left;
-    margin-left: 12px;
+    margin-left: 0px;
   }
 
   .mobile-local-toc + ul{
@@ -1828,9 +1835,6 @@ p.last {
     position: static;
     text-align: left;
     padding-left: 0px;
-  }
-  .edit-page { 
-    top:15px;
   }
   .navbtn {
     display:none;
